cabal-version: 3.4

name:           openhell
version:        0.0.1
category:       Cryptography
maintainer:     Markus Läll <markus.l2ll@gmail.com>
license:        MIT
build-type:     Simple

common lang
  default-language: GHC2021
  default-extensions:
    PatternSynonyms
    TypeFamilies
    LambdaCase

library
  import:         lang
  hs-source-dirs: src
  ghc-options:    -Wall -Wno-name-shadowing
  exposed-modules:
      X509.Certificate
      X509.Signature
      X509.Extensions
      Key
  build-depends:
    , asn1-encoding
    , asn1-types
    , base
    , bytestring
    , cryptonite
    , cryptostore
    , memory
    , pem
    , text
    , x509

executable openhell
  import:         lang
  main-is:        Main.hs
  other-modules:  CLI.Key
  hs-source-dirs: exe
  build-depends:
    , openhell
    , base
    , bytestring
    , cryptonite
    , cryptostore
    , mtl
    , optparse-applicative
    , pem
    , x509
